clang/test/BSC/Negative/Ownership/ArrayElem/arrayelem_decay/arrayelem_decay.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Safe int * _Borrow _ArrayElem borrow_return_local_array(int * _Borrow _ArrayElem p) {
  int a[10] = {0};
  (void)p;
  return a; // expected-error {{`a[]` does not live long enough}} expected-note {{`a[]` dropped here while still borrowed}}
}

_Safe int * _Borrow borrow_return_local_array_plain(int * _Borrow p) {
  int a[10] = {0};
  (void)p;
  return a; // expected-error {{`a[]` does not live long enough}} expected-note {{`a[]` dropped here while still borrowed}}
}

_Safe void two_mutable_borrow(int * _Borrow _ArrayElem, int * _Borrow _ArrayElem);
_Safe void two_mutable_borrow_test(void) {
  int a[10] = {0};
  two_mutable_borrow(a, a); // expected-error {{cannot borrow `a[]` as mutable more than once at a time}} expected-note {{first mut borrow occurs here}}
}

_Safe void two_mutable_plain_borrow(int * _Borrow, int * _Borrow);
_Safe void two_mutable_plain_borrow_test(void) {
  int a[10] = {0};
  two_mutable_plain_borrow(a, a); // expected-error {{cannot borrow `a[]` as mutable more than once at a time}} expected-note {{first mut borrow occurs here}}
}

_Safe void arithmetic_reborrow(void) {
  int a[10] = {0};
  int * _Borrow _ArrayElem p1 = a;
  int * _Borrow _ArrayElem p2 = p1 + 5; // expected-note {{`*p1` is borrowed here}}
  *p1 = 10; // expected-error {{cannot assign to `*p1` because it is borrowed}}
  *p2 = 5;
}

_Safe void decay_reborrow_old(void) {
  int a[10] = {0};
  int * _Borrow p1 = a; // expected-note {{first mut borrow occurs here}}
  int * _Borrow p2 = a; // expected-error {{cannot borrow `a[]` as mutable more than once at a time}}
  *p1 = 10;
  *p2 = 5;
}

_Safe void decay_reborrow_arrayelem(void) {
  int a[10] = {0};
  int * _Borrow _ArrayElem p1 = a; // expected-note {{first mut borrow occurs here}}
  int * _Borrow _ArrayElem p2 = a; // expected-error {{cannot borrow `a[]` as mutable more than once at a time}}
  *p1 = 10;
  *p2 = 5;
}
